# SecureCRT_Backups

./: .gitignore  501_reset.vbs  AAA_config.vbs  AGENTS.md  ASR_clear_session.vbs  ASR_login.vbs  ASR_subsciber.vbs  ASR_translations.vbs  BDCOM_by_desc.vbs  BDCOM_epon_basic_info.vbs  BDCOM_epon_info.vbs  BDCOM_optic.vbs  BDCOM_show_MAC.vbs  CLOUDFLARE_agent_setup_prompt.md  CRT_9_options.xml  CRT_9_sessions.xml  DownUp_speed.vbs  ELTEX_show_MAC.vbs  FINDSelect.vbs  GPON_Autofind.vbs  GPON_DIAG_STRUCT.md  GPON_ELTEX_delete.vbs  GPON_ELTEX_optic.vbs  GPON_ELTEX_running.vbs  GPON_HW_full_diag.vbs  GPON_IP2_config.vbs  GPON_IP_config.vbs  GPON_OOP_optic.vbs  GPON_auto-diagnostic.vbs  GPON_auto-diagnostic_test.vbs  GPON_class.py  GPON_commands.py  GPON_delete_ont.vbs  GPON_find_MAC.vbs  GPON_info_by_SN.py  GPON_info_by_description.py  GPON_optical.vbs  GPON_remote_ping.vbs  GPON_telnet.py  GPON_wanAcc.vbs  (+58 more)
.qwen/: settings.json.orig
BDCOM/: BDCOM_by_desc.vbs  BDCOM_epon_basic_info.vbs  BDCOM_epon_info.vbs  BDCOM_optic.vbs  BDCOM_show_MAC.vbs
GPON_HW/: GPON_Autofind.vbs  GPON_HW_full_diag.vbs  GPON_IP_config.vbs  GPON_OOP_optic.vbs  GPON_OOP_set_serial.vbs  GPON_auto-diagnostic_test.vbs  GPON_autodiagnostic.vbs  GPON_autodiagnostic_logic_test.py  GPON_autodiagnostic_main_test.vbs  GPON_autodiagnostic_test.py  GPON_autodiagnostic_test.vbs  GPON_autodiagnostic_test_old.vbs  GPON_class.py  GPON_class_new.py  GPON_class_old.py  GPON_class_test.py  GPON_currentConf.vbs  GPON_delete_ont.vbs  GPON_diag_new.vbs  GPON_diagnosis.vbs  GPON_find_MAC.vbs  GPON_info_by_SN.py  PROJECT.md  (+18 more)
(+8 files in other folders)
